--- a/Shared/LocalizationResource.resx
+++ b/Shared/LocalizationResource.resx
@@ -121,6 +121,6 @@
     <value>English</value>
   </data>
   <data name="Enum_Lithuanian" xml:space="preserve">
-    <value>Lithuanian</value>
+    <value>Lithuani</value>
   </data>
 </root>
