--- a/Web/Localization/ApplicationLocalization.resx
+++ b/Web/Localization/ApplicationLocalization.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Artists" xml:space="preserve">
+    <value>Artists</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="Home_MoreNews" xml:space="preserve">
     <value>More News...</value>
   </data>
   <data name="Home_NewReleases" xml:space="preserve">
     <value>New Releases</value>
+  </data>
+  <data name="LoadMore" xml:space="preserve">
+    <value>Load More</value>
   </data>
   <data name="NavSection_Contact" xml:space="preserve">
     <value>Contact</value>
@@ -138,8 +147,17 @@
   <data name="Nav_Menu" xml:space="preserve">
     <value>Menu</value>
   </data>
+  <data name="PageTitle_Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="Releases" xml:space="preserve">
+    <value>Releases</value>
+  </data>
   <data name="UnexpectedError" xml:space="preserve">
     <value>An error occured in the application</value>
+  </data>
+  <data name="View_BackToNews" xml:space="preserve">
+    <value>Back to News</value>
   </data>
   <data name="View_BackToReleases" xml:space="preserve">
     <value>Back to Releases</value>
