--- a/Core/LocalizationResource.resx
+++ b/Core/LocalizationResource.resx
@@ -120,7 +120,7 @@
   <data name="Enum_English" xml:space="preserve">
     <value>English</value>
   </data>
-  <data name="Enum_Lithuanian" xml:space="preserve">
-    <value>Lithuani</value>
+  <data name="Enum_Japanese" xml:space="preserve">
+    <value>Japanese</value>
   </data>
 </root>
